[package]
name = "cosmic-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib-sys = "0.15.1"
gobject-sys = "0.15.1"
gtk4-sys = "0.4.5"
gtk4 = "0.4.5"
once_cell = "1.9.0"
log = "0.4.14"
anyhow = "1.0.53"
libloading = "0.7.3"
regex = "1.5.4"
futures = "0.3.19"
notify = "5.0.0-pre.13"

[build-dependencies]
cbindgen = "0.20.0"
